@@ -48,11 +48,12 @@ class Test {
 ```
 ## Cache entity readers
 For cache any reader use this `ResourceCache`
+* if useFSTCache is true read and write cache faster
 
 ```java
 class Test {
     void sample() {
-        final ResourceCache cache = new ResourceCache("dir/to/be/saved");
+        final ResourceCache cache = new ResourceCache("dir/to/be/saved", true);
         try (IResourceReader reader = new ResourceReaderFromKGStoreV1Service("http://194.225.227.161:8091/")) {
             cache.cache(reader, 10000);
         }
@@ -64,7 +65,7 @@ And you can use `ResourceCache` like other reader
 ```java
 class Test {
     void sample() {
-        try (IResourceReader reader = new ResourceCache("dir/to/be/saved")) {
+        try (IResourceReader reader = new ResourceCache("dir/to/be/saved", true)) {
             extractor.setup(reader, 1000);
         }
     }
