@@ -6,7 +6,7 @@
 
     <groupId>ir.ac.iust.dml.kg</groupId>
     <artifactId>resource-extractor</artifactId>
-    <version>1.2.2</version>
+    <version>1.2.3</version>
 
     <properties>
         <log4j.veriosn>2.7</log4j.veriosn>
@@ -93,6 +93,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>de.ruedigermoeller</groupId>
+            <artifactId>fst</artifactId>
+            <version>2.47</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-runtime -->
