@@ -1,5 +1,6 @@
 * 1.2.0
     - Add ResourceReaderFromVirtuoso to read from virtuoso
-    - Make resource cache reader paraller
+    - Make resource cache reader parallel
+    - Add fst object serializer to increase performance
 * 1.1.0
     - Add Resource cache
